--- a/training/references.bib
+++ b/training/references.bib
@@ -42,3 +42,30 @@
 	url = {http://www.sciencedirect.com/science/article/pii/S0304380096019242},
 	note = {bibtex: Reynolds:1997em}
 }
+
+@article{janssen2020,
+	title = {On code sharing and model documentation of published individual and agent-based models},
+	author = {Janssen, Marco A. and Pritchard, Calvin and Lee, Allen},
+	year = {2020},
+	month = {12},
+	date = {2020-12-01},
+	journal = {Environmental Modelling & Software},
+	pages = {104873},
+	volume = {134},
+	doi = {10.1016/j.envsoft.2020.104873},
+	url = {https://www.sciencedirect.com/science/article/pii/S1364815220309300}
+}
+
+@article{sharma2023,
+	title = {Analytical code sharing practices in biomedical research},
+	author = {Sharma, Nitesh Kumar and Ayyala, Ram and Deshpande, Dhrithi and Patel, Yesha M and Munteanu, Viorel and Ciorba, Dumitru and Fiscutean, Andrada and Vahed, Mohammad and Sarkar, Aditya and Guo, Ruiwei and Moore, Andrew and Darci-Maher, Nicholas and Nogoy, Nicole A and Abedalthagafi, Malak S. and Mangul, Serghei},
+	year = {2023},
+	month = {08},
+	date = {2023-08-07},
+	journal = {bioRxiv},
+	pages = {2023.07.31.551384},
+	doi = {10.1101/2023.07.31.551384},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10441317/},
+	note = {PMID: 37609176
+PMCID: PMC10441317}
+}
