--- a/training/ContinousWorkflows.qmd
+++ b/training/ContinousWorkflows.qmd
@@ -77,3 +77,24 @@ people will be somewhat familiar with.
 shape*.
 - @sec-debugging -- for general R and specific SpaDES situations.
 
+## SpaDES and Continuous Workflows
+
+SpaDES allows us to implement feature 3 (hierarchical caching) of @tip-RerunTolerance because we can Cache at many levels: functions, events, modules, meta-modules, or entire projects. As we are developing inside a project, we can be working on a step inside a module that relies on previous "upstream" modules, but those modules can run very fast, so we can be quickly where we need to be, without breaking the workflow.
+
+Thinking about this situation, we can introduce the idea of "Module Types".
+
+## Module Types
+
+SpaDES doesn't have an explicit module types. Rather, by convention, we associate different modules with generic things they do. A fairly comprehensive list of modules types that we create are:
+
+- **Data Munging** -- uses `prepInputs` and outputs clean, usable data for a project
+- **Parameterization** -- uses data from e.g., a **Data Munging** module and uses statistics on data. This would be recognizable as *a complete ecological study for publication*.
+- **Calibration** -- similar to **Parameterization** but uses repeated simulation to estimate parameters.
+- **Study Area specifics** -- creates outputs that are very idiosyncratic to a study area
+- **Static Forecasting** -- creates outputs at different times, that are not used by itself
+- **Dynamic Forecasting** -- creates outputs at different times, that are also its own inputs
+- **Validation** -- takes many repeated inputs, often many replicates 
+- **Visualization** -- takes inputs from one or many replicated module runs and build rich visuals
+- **Post-Processing** -- takes inputs from one or many replicated module runs and builds data analytics. These may be similar to **Validation**
+
+
