--- a/training/TroubleshootingPackageInstallation.qmd
+++ b/training/TroubleshootingPackageInstallation.qmd
@@ -132,14 +132,14 @@ to install. See solutions in [Package has already been loaded] and
 ### Package version cannot be met or found
 
 When `Require` is used to install packages[^1], it uses various caching
-mechanisms. If a package can't be found, or there is an
-unexplainable installation failure clearing the package cache may fix it.
+mechanisms. If a package can't be found, or there is an unexplainable
+installation failure clearing the package cache may fix it.
 
 #### Potential solutions
 
 Try purging the cache with one or more of these:
 
-```{r}         
+```{r}
 ## Can't find the package remotely
 Require::purgeCache()
 
