--- a/training/intro.qmd
+++ b/training/intro.qmd
@@ -76,6 +76,8 @@ specific order so that one can recreate the steps to make the Results. A
 user can then use the module directly, rather instead of trying to
 recreate the necessary sequence of functions.
 
+[![Functions and modules as key tools to achieve workflow nimbleness. From @mcintire2022](assets/img/PERFICTfig1.jpg)](https://onlinelibrary.wiley.com/doi/10.1111/ele.13994)
+
 ### I use `targets` for my workflows. How does SpaDES differ?
 
 There are two major differences between `targets` and the SpaDES
