--- a/training/LandRDemo_coreVeg.qmd
+++ b/training/LandRDemo_coreVeg.qmd
@@ -542,12 +542,10 @@ outValid <- setupProject(
     simOut$studyArea
   },
   rasterToMatch = {
-    list.files(SpaDES.core::inputPath(simOut), "rasterToMatch_LandRDemo_coreVeg", full.names = TRUE) |>
-      terra::rast()
+    terra::deepcopy(simOut$rasterToMatch)
   },
   rawBiomassMapStart = {
-    list.files(SpaDES.core::inputPath(simOut), "rawBiomassMap_LandRDemo_coreVeg", full.names = TRUE) |>
-      terra::rast()
+    terra::deepcopy(simOut$rasterToMatchLarge)
   },
   simulationOutputs = {
     repDirs <- list.files(SpaDES.core::outputPath(simOut), "_rep", full.names = TRUE) 
@@ -574,17 +572,15 @@ outValid <- setupProject(
   sppEquivCol = simOut$sppEquivCol,
   sppColorVect = simOut$sppColorVect,
   speciesLayersStart = {
-    list.files(SpaDES.core::outputPath(simOut), "speciesLayers_2001_LandRDemo_coreVeg.tif", 
-               full.names = TRUE) |>
-      terra::rast()
+    terra::deepcopy(simOut$speciesLayers)
   },
   standAgeMapStart = {
-    list.files(SpaDES.core::inputPath(simOut), "standAgeMap_LandRDemo_coreVeg", full.names = TRUE) |>
-      terra::rast()
+    terra::deepcopy(simOut$standAgeMap)
   }
 )
 
 simOutValid <- SpaDES.core::simInitAndSpades2(outValid)
+
 ```
 
 ## Different scenarios and model selection {#sec-LandRScenarios}
