--- a/training/prepInputs.qmd
+++ b/training/prepInputs.qmd
@@ -12,7 +12,7 @@ execute:
   cache: false
 ---
 
-# `reproducible::prepInputs` for data {#sec-prepInputs}
+# `reproducible::prepInputs` for Data {#sec-prepInputs}
 
 ```{r setup}
 #| include: false
