--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -48,7 +48,7 @@ attempting this section.
 
 When starting to build a module or an event, we ask 2 key questions:
 
-**1. Do I need to repeat this?**
+**1. Do I need to repeat this operation?**
 
 **2. If yes, how often and/or when?**
 
