--- a/training/MetaDataAndModuleFiles.qmd
+++ b/training/MetaDataAndModuleFiles.qmd
@@ -22,15 +22,15 @@ execute:
 hook_output <- knitr::knit_hooks$get("output")
 
 knitr::knit_hooks$set(output = function(y, options) {
-if (!is.null(n <- options$outlines)) {
-y <- xfun::split_lines(y)
-if (length(y) > n) {
-# truncate the output
-y <- c(head(y, n), "....\n")
-}
-y <- paste(y, collapse = "\n")
-}
-hook_output(y, options)
+  if (!is.null(n <- options$outlines)) {
+    y <- xfun::split_lines(y)
+    if (length(y) > n) {
+      # truncate the output
+      y <- c(head(y, n), "....\n")
+    }
+    y <- paste(y, collapse = "\n")
+  }
+  hook_output(y, options)
 })
 libPath <- ifelse(dir.exists("packages"), "packages", "training/packages") # if run interactively vs knited
 .libPaths(libPath)
@@ -111,14 +111,14 @@ Require::Require(c("reproducible", "SpaDES.core"), repos = c("https://predictive
 # make a module
 nm1 <- "My_linear_model"
 modulePath <- "~/SpaDES_book/NewModuleIntro/NewModule"
-newModule(name = nm1, path = modulePath, open = FALSE,
-          events = list(
-            init = {
-              y <- sim$x + rnorm(10)      # <--------- add sim$ here
-              # fit a linear model
-              sim$model <- lm(y ~ sim$x)  # <--------- add sim$ here
-            }
-          ))
+SpaDES.core::newModule(name = nm1, path = modulePath, open = FALSE,
+                       events = list(
+                         init = {
+                           y <- sim$x + rnorm(10)      # <--------- add sim$ here
+                           # fit a linear model
+                           sim$model <- lm(y ~ sim$x)  # <--------- add sim$ here
+                         }
+                       ))
 ```
 
 **Where is this module code?** In the previous chapter, we didn't look
@@ -155,9 +155,9 @@ will put our `inputs` that we noticed in our code chunk. We will declare
 
 ```{r metadata}
 inputObjects = bindrows(
-    expectsInput(objectName = "x", objectClass = "numeric", 
-                 desc = "The inputs for the linear model", sourceURL = NA)
-  )
+  expectsInput(objectName = "x", objectClass = "numeric", 
+               desc = "The inputs for the linear model", sourceURL = NA)
+)
 ```
 
 ## `outputObjects`
@@ -169,9 +169,9 @@ declare `model` as an "output" by putting it there. Don't forget the
 
 ```{r}
 outputObjects = bindrows(
-    createsOutput(objectName = "model", objectClass = "lm", 
-                  desc = "A linear model object from the equation (x ~ y)")
-  )
+  createsOutput(objectName = "model", objectClass = "lm", 
+                desc = "A linear model object from the equation (x ~ y)")
+)
 ```
 
 ## Sharing inputs and outputs
@@ -249,9 +249,9 @@ the same.
 
 ```{r metadata2}
 inputObjects = bindrows(
-    expectsInput(objectName = "model", objectClass = "lm", 
-                 desc = "A linear model object from the equation (x ~ y)", sourceURL = NA)
-  )
+  expectsInput(objectName = "model", objectClass = "lm", 
+               desc = "A linear model object from the equation (x ~ y)", sourceURL = NA)
+)
 ```
 
 ## Default Values
@@ -302,17 +302,17 @@ outputs that model, and plots the fit.
 ## Questions
 
 1.  What are some things we "gained" from putting our simple 3 lines of
-    code into a module?
-    -   We can turn off plotting easily. Set `.plotInitialTime = NA` in
-        the `simInitAndSpades` call.
+code into a module?
+-   We can turn off plotting easily. Set `.plotInitialTime = NA` in
+the `simInitAndSpades` call.
 2.  What are some things we "lost"?
-    -   More complicated. (overkill for these 3 lines?)
+-   More complicated. (overkill for these 3 lines?)
 3.  What if we used an R package that wasn't in the base packages list?
-    -   See
-        [`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
-        for all the metadata items. Specifically, see `reqdPkgs`.
+-   See
+[`?defineModule`](https://rdrr.io/cran/SpaDES.core/man/defineModule.html)
+for all the metadata items. Specifically, see `reqdPkgs`.
 4.  What is the `sim`? See
-    [`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
+[`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
 
 ## Challenge yourself {#sec-moduleFilesAndMetadata-challengeYourself}
 
